# rump

./: Cargo.toml  README.md  install.sh  rump.service
.github/workflows/: rust.yml
assets/: style.css
assets/font-awesome/: all.min.css
mockups/: mock.html
src/: cache.rs  main.rs  models.rs  mpd.rs  routes.rs  state.rs  templates.rs
src/handlers/: album_art.rs  controls.rs  database.rs  library.rs  mod.rs  now_playing.rs  playlist.rs  status.rs
templates/: album_songs.html  albums.html  artists.html  background_tint.html  database.html  database_update_status.html  index.html  library.html  now_playing.html  now_playing_content.html  playlist.html  playlist_songs.html  settings.html  status.html  tabs.html
