[package]
name = "rump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
mpd_client = "1.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
base64 = "0.21.7"
askama = "0.12.1"
tower-http = { version = "0.5.1", features = ["fs"] }
