[package]
name = "rump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
mpd_client = "1.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
askama = { version = "0.12.1", features = ["with-axum"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
anyhow = "1.0.79"
image = "0.24.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4.33"
askama_axum = "0.4.0"
bytes = "1.5.0"
